<resources>
    <string name="app_name">Instagram</string>
    <string name="login">Log In</string>
    <string name="login_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="register_hint">Don\'t have an account? Sign up.</string>
    <string name="auth_error">Wrong login or password</string>
    <string name="reg_email_hint">Mobile Number or Email</string>
    <string name="reg_fullname_hint">Full Name</string>
    <string name="reg_username_hint">Username</string>
    <string name="reg_password_hint">Password</string>
    <string name="reg_button">Sign up</string>
    <string name="incor_email">Incorrect email</string>
    <string name="incor_fullname">Incorrect fullname</string>
    <string name="incor_username">Incorrect username (a-z, 0-9)</string>
    <string name="incor_incorpassword">Password must be at least 6 symbols</string>
    <string name="error_register">Failed to register an account</string>
    <string name="create_post">CREATE POST</string>
    <string name="next_button_text">Next</string>
    <string name="description_hint">Description</string>
    <string name="error_loading">Failed to load image</string>
    <string name="error_connection">Check your internet connection</string>
    <string name="search_hint">Search</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="posts_text">Posts</string>
    <string name="following_text">Following</string>
    <string name="follow_text">Follow</string>
    <string name="posts_label">Posts</string>
    <string name="likes_text">likes</string>
    <string name="comments_label">Comments</string>
    <string name="hint_comment">Comment..</string>
    <string name="post_button">Post</string>
    <string name="delete_text">Delete</string>
    <string name="followers_label">Followers</string>
    <string name="following_label">Following</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_photo">Change profile photo</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="incor_bio">Bio no more than 64 symbols</string>
    <string name="username_use">Username is already use</string>
    <string name="new_post">New post</string>
    <string name="log_out">Log out</string>
    <string name="back_title">Back</string>
    <string name="notification_title">What\'s new</string>
    <string name="comment_title">"commented: "</string>
    <string name="like_title">liked your post.</string>
    <string name="days_ago">d</string>
    <string name="follow_title">started following you</string>
    <string name="gallery_title">Gallery</string>
    <string name="log_in_hint">Have an account? Log In.</string>
    <string name="views_text">"Views: "</string>
</resources>
