<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:style="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="240dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="40sp"
        style:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp" />

    <EditText
        android:id="@+id/reg_email"
        style="@style/AuthEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/login_hint"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:textColor="@color/colorGrey"
        style:layout_constraintEnd_toEndOf="parent"
        style:layout_constraintStart_toStartOf="parent"
        style:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/reg_password"
        style="@style/AuthEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColor="@color/colorGrey"
        style:layout_constraintEnd_toEndOf="parent"
        style:layout_constraintStart_toStartOf="parent"
        style:layout_constraintTop_toBottomOf="@+id/reg_email" />

    <Button
        android:id="@+id/reg_button"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorBlueButton"
        android:text="@string/login"
        android:textColor="@android:color/white"
        style:layout_constraintEnd_toEndOf="parent"
        style:layout_constraintStart_toStartOf="parent"
        style:layout_constraintTop_toBottomOf="@+id/reg_password" />

    <Button
        style="@style/AuthEditText"
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_hint"
        style:layout_constraintBottom_toBottomOf="parent"
        style:layout_constraintEnd_toEndOf="parent"
        style:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>